# Diffusion

./: .gitignore  CMakeLists.txt  diffusion.ini  main.cpp  帮助.txt  技术声明.txt  版本变更历史.txt  版权声明.txt
assets/design/: Diffusion.EAP  扩散加密机需求说明书.docx  架构.vsdx
lang/: en_US.lng  zh_CN.lng
src/cipher/: AbstractAlgorithm.h  AbstractFileCipher.h  Algorithm.h  BufferCipher.h  CipConfig.h  CipherLisenter.h  CipherModel.h  Consts.h  Contact.h  FileCipher.h  Job.h  JobCipherFactory.h  KeyHandler.h  Padding.h  Scheduler.h  StreamCipher.h  Worker.h  algorithm_ciphers.h  algorithm_factory.h  buffer_ciphers.h  buffer_factory.h  cipher.cpp  cipher_store.h  data.format  file_decipher.h  file_encipher.h  filter.h  filters.h  info.h  info_factory.h  info_handler.h  info_v1.h  item_listener.h  items.h  key_box.h  key_handler_factory.h  key_handlers.h  paddings.h  parallel_buffer_cipher.h  schedulers.h  (+6 more)
src/core/: Application.cpp  Application.h  DiffusionException.h  Object.h  Reusable.h  Version.h  chars.h  defines.h  reusable.h  static_init.h  types.h
src/module/cipher/: AbstractAlgorithm.h  AbstractFileCipher.h  AbstractKeyHandler.h  AbstractSegmentCipher.h  AbstractStreamCipher.h  Algorithm.h  AlgorithmFactory.cpp  AlgorithmFactory.h  AlgorithmInfo.h  Boollock.h  CipConfig.h  CipherInfo.h  Consts.h  Contact.h  DefaultAlgorithm.h  FileCipher.h  Info.h  InfoHandlerFactory.cpp  InfoHandlerFactory.h  InfoHeader.h  Init.h  KeyHandler.h  KeyHandlerFactory.cpp  KeyHandlerFactory.h  KeyInfo.h  Padding.h  PaddingFactory.h  Segment.h  SegmentCipher.h  SegmentFactory.cpp  SegmentFactory.h  SessionConfig.h  SessionInfo.h  StreamCipher.h  buffer_ciphers.h  buffer_factory.h  file_decipher.h  file_encipher.h  info_factory.h  info_handler.h  (+5 more)
src/module/cipher/algorithms/: AbstractAlgorithmFactory.h  DC140713AlgorithmFactory.cpp  DC140713AlgorithmFactory.h  DC140713Decipher.h  DC140713Decipher_V1.h  DC140713Encipher.h  DC140713Encipher_V1.h  a_box.h
src/module/cipher/contacts/: BufferContact.h  TextContact.h
src/module/cipher/infos/: AbstractInfoHandlerFactory.h  DC3_14InfoHandlerFactory.h  DefaultInfoHandlerFactory.h  HeaderInfoHandler.h  info_dc3.14.h  info_dc3.14_v1.h  info_handler_help.h  info_header.cpp
src/module/cipher/key_handlers/: AbstractKeyHandlerFactory.h  FixedKeyHandlerFactory.cpp  FixedKeyHandlerFactory.h  FixedKeyHandler_V1.h  MixKeyHandler.h  StreamKeyHandlerFactory.cpp  StreamKeyHandlerFactory.h  StreamKeyHandler_V1.h
src/module/cipher/paddings/: RandomBlockPadding.h
src/module/cipher/segments/: parallel_segment_cipher.cpp  parallel_segment_cipher.h  serial_segment_cipher.cpp  serial_segment_cipher.h
src/module/cipher/streams/: stream_cipher.cpp  stream_cipher.h
src/module/cmds/: AddItemCommand.h  MvcCommand.h  RemoveItemCommand.h  cmd.cpp  cmd_factory_impl.h  cmds.h  options.h  text_cipher_command.h
src/module/config/: Config.h  config.cpp  config_handler.h  config_key.h  configio.h  configuration.h  configure.h  def_config.h  ini_config.h  instances.h  type_config.h  values.h
src/module/fm/: filemapping.h  fm.cpp  fm_factory.h  winfm.h  winfm2.h
src/module/format/: content.h  content_handler.h  format.cpp  format.h  formatter.h  level.h  levels.h  messages.h
src/module/fs/: FileSmash.h  file_smash_factory.h  secure_file_smash.h
src/module/i18n/: def_i18n.h  i18N.h  i18ns.h  lang.h
src/module/random/: AbstractSeedSource.h  Random.h  RandomEngine.h  SecureSeedFactory.h  SeedFactory.h  SeedSource.h  randoms.h  rd_box.h  seed_factory_impl.h  seed_source.h
src/module/random/engine/: DARandomEngine.h  MersenneTwisterEngine.h
src/module/random/rds/: AbstractRandom.h  FastRandom.h  SecureRandom.h
src/module/random/seeds/: CPUSeedSource.h  MemorySeedSource.h  TimeSeedSource.h
src/mvc/: CommandException.h
src/mvc/activity/: Activity.h
src/mvc/cmd/: Command.h  Context.h  Invoker.h  Option.h  StandardInvoker.h  cmd_factory.h
src/mvc/console/: ConsoleActivity.cpp  ConsoleActivity.h  cipher_csl_activity.h  command_csl_activity.h  console.h  file_csl_activity.h  main_csl_activity.h  text_csl_activity.h  winconsole.h
src/mvc/notify/: ClassifyNotification.h  HashClassifyNotification.h  Notification.h  Notifier.h  NotifyEvent.h
src/tool/: Streams.h  Strings.h  base64.h  chars.cpp  converter.h  file_handler.h  funs.h  queue.h  tools.h  validator.h
