cmake_minimum_required(VERSION 3.7)
project(Diffusion)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp")

set(SOURCE_FILES
        src/cipher/a_box.h
        src/cipher/AbstractAlgorithm.h
        src/cipher/AbstractFileCipher.h
        src/cipher/Algorithm.h
        src/cipher/algorithm_ciphers.h
        src/cipher/algorithm_factory.h
        src/cipher/buffer_ciphers.h
        src/cipher/BufferCipher.h
        src/cipher/CipConfig.h
        src/cipher/cipher.cpp
        src/cipher/CipherLisenter.h
        src/cipher/Consts.h
        src/cipher/Contact.h
        src/cipher/file_decipher.h
        src/cipher/file_encipher.h
        src/cipher/FileCipher.h
        src/cipher/filter.h
        src/cipher/filters.h
        src/cipher/info.h
        src/cipher/info_factory.h
        src/cipher/info_handler.h
        src/cipher/info_v1.h
        src/cipher/item_listener.h
        src/cipher/items.h
        src/cipher/Job.h
        src/cipher/JobCipherFactory.h
        src/cipher/key_box.h
        src/cipher/key_handler_factory.h
        src/cipher/key_handlers.h
        src/cipher/KeyHandler.h
        src/cipher/Padding.h
        src/cipher/paddings.h
        src/cipher/reusable.h
        src/cipher/Scheduler.h
        src/cipher/schedulers.h
        src/cipher/stream_ciphers.h
        src/cipher/StreamCipher.h
        src/cipher/structs.h
        src/cipher/text_ciphers.h
        src/cipher/version.h
        src/cipher/Worker.h
        src/cipher/worker_factory.h
        src/cipher/workers.h
        src/core/Application.cpp
        src/core/Application.h
        src/core/chars.h
        src/core/defines.h
        src/core/DiffusionException.h
        src/core/Object.h
        src/core/static_init.h
        src/core/types.h
        src/module/cmds/text_cipher_command.h
        src/module/cmds/cmd.cpp
        src/module/cmds/cmd_factory_impl.h
        src/module/cmds/cmds.h
        src/module/cmds/MvcCommand.h
        src/module/cmds/options.h
        src/module/config/config.cpp
        src/module/config/Config.h
        src/module/config/config_handler.h
        src/module/config/config_key.h
        src/module/config/configio.h
        src/module/config/configuration.h
        src/module/config/def_config.h
        src/module/config/ini_config.h
        src/module/config/instances.h
        src/module/config/type_config.h
        src/module/config/values.h
        src/module/fm/filemapping.h
        src/module/fm/fm.cpp
        src/module/fm/fm_factory.h
        src/module/fm/winfm.h
        src/module/format/content.h
        src/module/format/content_handler.h
        src/module/format/format.cpp
        src/module/format/format.h
        src/module/format/formatter.h
        src/module/format/level.h
        src/module/format/levels.h
        src/module/format/messages.h
        src/module/fs/file_smash_factory.h
        src/module/fs/FileSmash.h
        src/module/fs/secure_file_smash.h
        src/module/i18n/def_i18n.h
        src/module/i18n/i18N.h
        src/module/i18n/i18ns.h
        src/module/i18n/lang.h
        src/module/random/Random.h
        src/module/random/randoms.h
        src/module/random/rd_box.h
        src/module/random/seed_factory_impl.h
        src/module/random/seed_source.h
        src/module/random/SeedFactory.h
        src/mvc/activity/Activity.h
        src/mvc/cmd/cmd_factory.h
        src/mvc/cmd/Command.h
        src/mvc/cmd/Context.h
        src/mvc/cmd/Invoker.h
        src/mvc/cmd/Option.h
        src/mvc/cmd/StandardInvoker.h
        src/mvc/console/cipher_csl_activity.h
        src/mvc/console/command_csl_activity.h
        src/mvc/console/console.h
        src/mvc/console/ConsoleActivity.cpp
        src/mvc/console/ConsoleActivity.h
        src/mvc/console/file_csl_activity.h
        src/mvc/console/main_csl_activity.h
        src/mvc/console/text_csl_activity.h
        src/mvc/console/winconsole.h
        src/mvc/notify/ClassifyNotification.h
        src/mvc/notify/HashClassifyNotification.h
        src/mvc/notify/Notification.h
        src/mvc/notify/Notifier.h
        src/mvc/notify/NotifyEvent.h
        src/mvc/CommandException.h
        src/tool/base64.h
        src/tool/chars.cpp
        src/tool/converter.h
        src/tool/file_handler.h
        src/tool/funs.h
        src/tool/queue.h
        src/tool/Streams.h
        src/tool/Strings.h
        src/tool/tools.h
        src/tool/validator.h
        main.cpp src/cipher/parallel_buffer_cipher.h src/cipher/buffer_factory.h src/module/config/configure.h src/cipher/CipherModel.h src/module/cmds/AddItemCommand.h src/cipher/cipher_store.h src/module/cmds/RemoveItemCommand.h)

add_executable(Diffusion ${SOURCE_FILES})